--- a/Lesson4/bài về nhà.css
+++ b/Lesson4/bài về nhà.css
@@ -114,21 +114,23 @@ footer {
 
 .leftside-5 {
     height: 400px;
-    width: 100px;
+    width: 10%;
     background-color: darkorchid;
       
     
 }
 .content-5 {
     height: 400px;
-    width: 650px;
+    width: 80%;
     background-color: deepskyblue;
     text-align: center;
+    margin-left: 10px ;
+    margin-right: 10px;
    
 }
 .rightside-5 {
     height: 400px;
-    width: 100px;
+    width: 10%;
     background-color: darkorchid;
     float: right;
     
@@ -138,4 +140,45 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+/* bài 4 */
+.leftside-6 {
+    width: 100px;
+    height: 480px;
+    background-color: darkorchid;
+    float: left;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 30px;
+}
+.container-6 {
+    display: flex;
+    flex-direction: column;
+    
+    
+}
+.header-6 {
+   margin-top: 0;
+   width: 100%;
+    height: 50px;
+    background-color: darkgoldenrod;
+}
+.footer-6 {
+    width: 100%;
+    height: 50px;
+    background-color: darkgoldenrod;
+}
+.content-6 {
+    width: 100%;
+    height: 300px;
+    background-color: darkolivegreen;
+}
+.center6 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 10px;
+    margin-bottom: 10px;
+    margin-top: 30px;
 }
